<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@drawable/custom_button">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:text="@string/Title"
                android:gravity="center|left"
                android:paddingLeft="20dp"
                android:textSize="30dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="SAVE"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="#373232"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.1"
                android:layout_margin="10dp"
                android:textColor="#535252"
                android:background="@drawable/custom_button2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:text="Title"
                android:textSize="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:paddingLeft="5dp"
                android:textColor="#4E4D4D"
                android:background="@drawable/custom_button2"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:text="@string/etDescription"
                android:gravity="top"
                android:background="@drawable/custom_button2"
                android:layout_margin="13dp"
                android:paddingLeft="5dp"
                android:textSize="16dp"
                android:textColor="#4E4D4D"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/tvRemind"
                android:paddingLeft="13dp"
                android:textSize="16dp"
                android:textColor="#4E4D4D"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/time"
                    android:gravity="center"
                    android:textSize="30dp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:text="@string/date"
                    android:gravity="center"
                    android:textSize="30dp"
                    android:textColor="@color/black"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.4"
                    android:text="@string/tvType"
                    android:gravity="center|left"
                    android:textSize="16dp"
                    android:textColor="#4E4D4D"
                    android:layout_marginLeft="13dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.1"
                    android:layout_margin="5dp"
                    android:background="@drawable/custom_button2">
                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.1"
                        android:layout_margin="0.1dp" />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="13dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.4"
                    android:text="@string/tvTag"
                    android:gravity="center|left"
                    android:textSize="16dp"
                    android:textColor="#4E4D4D"/>
                <TextView
                    android:id="@+id/tvChooseTags"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:text="@string/tvChooseTags"
                    android:gravity="center|left"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="13dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.4"
                    android:text="@string/tvWeeks"
                    android:gravity="center|left"
                    android:textSize="16dp"
                    android:textColor="#4E4D4D"/>
                <TextView
                    android:id="@+id/tvChooseWeeks"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:text="@string/tvChooseWeeks"
                    android:gravity="center|left"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/tvTune"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/custom_button2"
                    android:text="@string/tvTune"
                    android:gravity="center"
                    android:textSize="16dp"
                    android:textColor="#4E4D4D"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6">
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>